--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,8 +1,10 @@
-path.driver = /Users/Desktop/driver/chromedriver
-name.driver = webdriver.chrome.driver
+path.driver = D:Resliv
+name.driver = chromedriver
 
-home.url = https://www.tut.by/
-online-kino.url = https://afisha.tut.by/online-cinema/
-mult.url = https://afisha.tut.by/online-cinema/animation/
+HOME_URL = https://www.tut.by/
+ONLINE_CINEMA_URL = https://afisha.tut.by/online-cinema/
+ANIMATION_URL = https://afisha.tut.by/online-cinema/animation/
 
-imp.wait = 10
+IMPLICIT_WAIT = 10
+PAGE_LOAD = 10
+SCRIPT_LOAD= 10
