--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,5 @@
-path.driver = D:Resliv
-name.driver = chromedriver
+PATH_DRIVER = D:Resliv
+NAME_DRIVER = chromedriver
 
 HOME_URL = https://www.tut.by/
 ONLINE_CINEMA_URL = https://afisha.tut.by/online-cinema/
